force-app/main/default/objects/Lilly_eCommerce_Registration__c/Lilly_eCommerce_Registration__c.object-meta.xml
<CustomObject>
    <label>eCommerce Registration</label>
    <nameField>
        <label>eCommerce Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>eCommerce Registration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>