force-app/main/default/objects/Lilly_eCommerce_Registration__c/fields/Confirm_Email__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Email__c</fullName>
    <label>Confirm Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>