force-app/main/default/objects/Lilly_eCommerce_Registration__c/fields/Lilly_Practice_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Practice_Display_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice Display Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>eCommerce Registration</relationshipLabel>
    <relationshipName>AGN_eCommerce_Registration</relationshipName>
    <type>Lookup</type>
</CustomField>