force-app/main/default/objects/Lilly_eCommerce_Registration__c/fields/Lilly_Practice_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Practice_Owner_Email__c</fullName>
    <label>Practice Owner Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>