force-app/main/default/objects/Lilly_eCommerce_Registration__c/fields/Lilly_Practice_Owner_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Practice_Owner_Last_Name__c</fullName>
    <label>Practice Owner Last Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>