force-app/main/default/objects/Lilly_eCommerce_Registration__c/fields/Lilly_Practice_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Practice_Phone_Number__c</fullName>
    <label>Practice Phone Number</label>
    <type>Phone</type>
</CustomField>