force-app/main/default/objects/Lilly_eCommerce_Registration__c/fields/Lilly_Practice_Web_Link_www_website_com__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Practice_Web_Link_www_website_com__c</fullName>
    <label>Practice Website Link (www.website.com)</label>
    <type>Url</type>
</CustomField>