force-app/main/default/objects/Lilly_eCommerce_Registration__c/fields/Lilly_Practice_Website_Contact_Link__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Practice_Website_Contact_Link__c</fullName>
    <label>Practice Website Contact Link</label>
    <type>Url</type>
</CustomField>