force-app/main/default/objects/Lilly_eCommerce_Registration__c/fields/Lilly_Sub_Domain__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Sub_Domain__c</fullName>
    <label>Sub-Domain</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>