force-app/main/default/objects/Lilly_eCommerce_Registration__c/validationRules/Email_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>Confirm_Email__c  &lt;&gt;  Lilly_Practice_Owner_Email__c</errorConditionFormula>
    <errorMessage>Email does not match!</errorMessage>
</ValidationRule>